# johma_bot_c

./: .clangd  .gitignore  CMakeLists.txt  Makefile  johma_bot.c  johma_bot.h
commands/: watch_dogs.c  watch_dogs.h  yaa.h
include/: json_type.h  vector.h
libs/: filecontroller.c  filecontroller.h  writerthred.c  writerthred.h
